--- a/META.yml
+++ b/META.yml
@@ -33,5 +33,5 @@ resources:
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=P5U-Command-Changes
   homepage: https://metacpan.org/release/P5U-Command-Changes
   license: http://dev.perl.org/licenses/
-  repository: https://bitbucket.org/tobyink/p5-p5u-command-changes
-version: 0.001
+  repository: https://github.com/tobyink/p5-p5u-command-changes
+version: 0.002
